# scHiCStackL

./: LICENSE  README.md  pyproject.toml  requirements.txt  scHiCStackL-0.0.3-py3-none-any.whl  setup.cfg  setup.py
Example/: cell_embedding_generation.py  cell_num.json
Files/PCA_file/human/2655/: label.txt  pca_cell_file.txt
Files/PCA_file/human/626/: label.txt  pca_cell_file.txt
Files/PCA_file/mouse/178/: label.txt  pca_cell_file.txt
parameters/178/: C.json  al.json
parameters/2655/: C.json  al.json
parameters/626/: C.json  al.json
src/scHiCStackL/: scHiCStackL.py
src/scHiCStackL.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
