[metadata]
name = scHiCStackL
version = 0.0.3
author = YingFu Wu
author_email = 18821658087@163.com
description = scHiCStackL Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
include_package_data=True
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
package_data=
        # If any package contains *.txt or *.rst files, include them:
        "": ["*.txt", "*.json"]
        # And include any *.msg files found in the "hello" package, too:
        "Files": ["Base/*.txt",
              "PCA_file/human/626/*.txt",
              "PCA_file/human/2655/*.txt",
              "PCA_file/mouse/178/*.txt",
              "test_samples/*.*",
              "Base/*.txt"],
        "parameters":["178/*.json",
                  "626/*.json",
                  "2655/*.json"]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src